Bug 1168556 - Fixes vertical spacing of titlebar buttons in OS X themes when tabs are not in the titlebar. r=mconley
UltraBlame original commit: c7eec18f6d2b408f193599d7b2ba51e01cc07b21

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -1278,6 +1278,83 @@ windowButtonMarginTop
 main
 -
 window
+:
+not
+(
+[
+tabsintitlebar
+]
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+buttonbox
+-
+container
+:
+-
+moz
+-
+lwtheme
+#
+main
+-
+window
+:
+not
+(
+[
+tabsintitlebar
+]
+)
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+secondary
+-
+buttonbox
+>
+#
+titlebar
+-
+fullscreen
+-
+button
+:
+-
+moz
+-
+lwtheme
+{
+margin
+-
+top
+:
+3px
+;
+}
+#
+main
+-
+window
 [
 customize
 -
